[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-useragent"
version = "1.4.0"
description = "Up-to-date simple useragent faker with real world database"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
